# hunterstudentscheduler

./: .env.example  .gitignore  DB_INTEGRATION_TODO.md  README.md  docker-compose.yml  index.html  models.py  package-lock.json  package.json  test-data.py  tsconfig.node.json  vite.config.ts
.github/workflows/: scrape.yml  (+1 more)
backend/: .env.example  README.md  docker-compose.yml  init.sql  package-lock.json  package.json  supabase-auth.sql
database/: .env.example  README.md  docker-compose.yml  refresh_program_elective_courses.sql  schema.sql  seed.sql
parser/: .env.example  .gitignore  Dockerfile  README.md  pom.xml
schedulingLogic/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  api.README.md  api.py  candidate_builder.py  constraints.py  constraints_api.wcnf  constraints_big.wcnf  constraints_new.py  errors.py  input_builder.py  models.py  requirements.txt  run_db_tmp.py  run_rc2.py  run_test.py  run_test_profile_scheduler.py  test_data.py  test_profiles.py  wcnf.py
scraper/: Cargo.toml  README.md  citations.md  config.json  env.example
scraper/examples/: course-list.json  sections.json
scraper/src/: fetcher.rs  lib.rs  main.rs  settings.rs
scraper/src/api/: mod.rs  v1.rs
scraper/src/api/handlers/: all_terms.rs  course_detail.rs  course_list.rs  course_requirements.rs  course_section.rs  current_term.rs  hello.rs  initialize.rs  mod.rs
scraper/src/cli/: mod.rs  scrape.rs  serve.rs
scraping/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
scripts/: generate_mermaid_models.py
watchtower/: .gitignore  pom.xml
(+94 files in other folders)
